[gd_scene load_steps=57 format=3 uid="uid://c4p0eoejkechw"]

[ext_resource type="Script" path="res://scripts/Characters/main_characters/stick_player/StickPlayer.gd" id="1_33x66"]
[ext_resource type="Texture2D" uid="uid://cnrv3jo4lrpsy" path="res://assests/characters/Player/StickFigure/sticky_fighter_dash_128x128.png" id="2_1701p"]
[ext_resource type="Texture2D" uid="uid://3o35ho36flep" path="res://assests/characters/Player/StickFigure/sticky_fighter_fall_128x128.png" id="3_mtstk"]
[ext_resource type="Texture2D" uid="uid://b8hqpba70ap0q" path="res://assests/characters/Player/StickFigure/sticky_fighter_idle_128x128.png" id="4_pursj"]
[ext_resource type="Texture2D" uid="uid://dhfn6grunlqma" path="res://assests/characters/Player/StickFigure/sticky_fighter_jump_128x128.png" id="5_2fxrj"]
[ext_resource type="Texture2D" uid="uid://bv6oedeby3b6x" path="res://assests/characters/Player/StickFigure/sticky_fighter_run_128x128.png" id="6_jfjua"]
[ext_resource type="Texture2D" uid="uid://blvattrlckuqi" path="res://assests/characters/Player/StickFigure/sticky_fighter_slide_128x128.png" id="7_xtqf7"]
[ext_resource type="Texture2D" uid="uid://cqcx5hbuwtulf" path="res://assests/characters/Player/StickFigure/sticky_fighter_walk_128x128.png" id="8_qd8r4"]
[ext_resource type="PackedScene" uid="uid://bx1obfbdhjnfg" path="res://scenes/state_machine.tscn" id="9_l637m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5xj8o"]
atlas = ExtResource("2_1701p")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e34hy"]
atlas = ExtResource("2_1701p")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtjsc"]
atlas = ExtResource("2_1701p")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2ex6"]
atlas = ExtResource("2_1701p")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7821a"]
atlas = ExtResource("2_1701p")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vmsv"]
atlas = ExtResource("2_1701p")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5mfg"]
atlas = ExtResource("3_mtstk")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pw88"]
atlas = ExtResource("3_mtstk")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ashl3"]
atlas = ExtResource("4_pursj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r518u"]
atlas = ExtResource("4_pursj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jgjx"]
atlas = ExtResource("4_pursj")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j63wi"]
atlas = ExtResource("4_pursj")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4vcg"]
atlas = ExtResource("4_pursj")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_68puk"]
atlas = ExtResource("4_pursj")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxar3"]
atlas = ExtResource("4_pursj")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh6ap"]
atlas = ExtResource("4_pursj")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohecs"]
atlas = ExtResource("5_2fxrj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpdqd"]
atlas = ExtResource("5_2fxrj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt0ya"]
atlas = ExtResource("5_2fxrj")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m1ds"]
atlas = ExtResource("6_jfjua")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pamyo"]
atlas = ExtResource("6_jfjua")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ky2i0"]
atlas = ExtResource("6_jfjua")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt53e"]
atlas = ExtResource("6_jfjua")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s8f3"]
atlas = ExtResource("6_jfjua")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya0mb"]
atlas = ExtResource("6_jfjua")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2e0ww"]
atlas = ExtResource("6_jfjua")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e36ay"]
atlas = ExtResource("6_jfjua")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngyte"]
atlas = ExtResource("7_xtqf7")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f32j"]
atlas = ExtResource("7_xtqf7")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqxv"]
atlas = ExtResource("7_xtqf7")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdhsq"]
atlas = ExtResource("7_xtqf7")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3atdq"]
atlas = ExtResource("7_xtqf7")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffmej"]
atlas = ExtResource("7_xtqf7")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgahb"]
atlas = ExtResource("7_xtqf7")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlxvb"]
atlas = ExtResource("7_xtqf7")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uinpc"]
atlas = ExtResource("8_qd8r4")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypvi4"]
atlas = ExtResource("8_qd8r4")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhj0d"]
atlas = ExtResource("8_qd8r4")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v6nn"]
atlas = ExtResource("8_qd8r4")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rphfj"]
atlas = ExtResource("8_qd8r4")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xarar"]
atlas = ExtResource("8_qd8r4")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6oy8"]
atlas = ExtResource("8_qd8r4")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_747iv"]
atlas = ExtResource("8_qd8r4")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_qeegi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xj8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e34hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtjsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2ex6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7821a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vmsv")
}],
"loop": true,
"name": &"dash",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5mfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pw88")
}],
"loop": false,
"name": &"fall",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ashl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r518u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jgjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j63wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4vcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68puk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxar3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh6ap")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohecs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpdqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt0ya")
}],
"loop": false,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m1ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pamyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ky2i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt53e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s8f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya0mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e0ww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e36ay")
}],
"loop": true,
"name": &"run",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngyte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f32j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdhsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3atdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffmej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgahb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlxvb")
}],
"loop": true,
"name": &"slide",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uinpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypvi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhj0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v6nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rphfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xarar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6oy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_747iv")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l4yic"]
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_agi4r"]
radius = 9.16385
height = 43.8661

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yrdjs"]
radius = 9.14278
height = 36.7192

[node name="StickyPlayer" type="CharacterBody2D"]
script = ExtResource("1_33x66")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qeegi")
animation = &"dash"
autoplay = "idle"

[node name="MainCollision2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 11)
shape = SubResource("CapsuleShape2D_l4yic")

[node name="StateMachine" parent="." instance=ExtResource("9_l637m")]

[node name="DashCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 15)
rotation = 0.724312
shape = SubResource("CapsuleShape2D_agi4r")
disabled = true

[node name="SlideCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-14, 17)
rotation = -0.837758
shape = SubResource("CapsuleShape2D_yrdjs")
disabled = true
